--- a/index.html
+++ b/index.html
@@ -23,14 +23,96 @@
                     <div class="header-top-menu">
                         <button class="header-top-menu-button">
                             Оставить заявку
+                            <form action="" class="header-top-menu-button-request">
+                                <div class="header-top-menu-button-request-wrap">
+                                    <input type="text" placeholder="ФИО">
+                                    <input type="tel" placeholder="Телефон">
+                                    <div class="header-top-menu-button-request-wrap-competition">
+                                        <img src="./static/images/select_arrow.png" alt="">
+                                        <input type="text" value="Няня" class="header-top-menu-button-request-wrap-competition" readonly>
+                                        <div class="header-top-menu-button-request-wrap-competition-menu">
+                                            <div class="header-top-menu-button-request-wrap-competition-menu__item">
+                                                Репетитор
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-competition-menu__item">
+                                                Гувернантка
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-competition-menu__item">
+                                                Няня
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-competition-menu__item">
+                                                 Водитель
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-competition-menu__item">
+                                                Садовник
+                                           </div>
+                                        </div>
+                                    </div>
+                                    <div class="header-top-menu-button-request-wrap-work_period">
+                                        <input type="text" placeholder="График работы" class="header-top-menu-button-request-wrap-work_period">
+                                        <img src="./static/images/select_arrow.png" alt="">
+                                        <div class="header-top-menu-button-request-wrap-work_period-menu">
+                                            <div class="header-top-menu-button-request-wrap-work_period-menu__item">
+                                                Полный день
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-work_period-menu__item">
+                                                Пол дня
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-work_period-menu__item">
+                                                График работы
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-work_period-menu__item">
+                                                 несколько часов
+                                            </div>
+                                            <div class="header-top-menu-button-request-wrap-work_period-menu__item">
+                                                Круглосуточно
+                                           </div>
+                                        </div>
+                                    </div>
+                                    <textarea placeholder="Дополнительная информация" rows="3"></textarea>
+                                </div>
+                                <input type="submit" class="header-top-menu-button button-submit">
+                            </form>
                         </button>
                         <button class="header-top-menu-button">
                             Отправить резюме
+                            <form action="" class="header-top-menu-button-resume">
+                                <div class="header-top-menu-button-resume-wrap">
+                                    <input type="text" placeholder="ФИО">
+                                    <input type="tel" placeholder="Телефон">
+                                    <div class="header-top-menu-button-resume-wrap-competition">
+                                        <img src="./static/images/select_arrow.png" alt="">
+                                        <input type="text" class="header-top-menu-button-resume-wrap-competition" readonly placeholder="Должность">
+                                        <div class="header-top-menu-button-resume-wrap-competition-menu">
+                                            <div class="header-top-menu-button-resume-wrap-competition-menu__item">
+                                                Репетитор
+                                            </div>
+                                            <div class="header-top-menu-button-resume-wrap-competition-menu__item">
+                                                Гувернантка
+                                            </div>
+                                            <div class="header-top-menu-button-resume-wrap-competition-menu__item">
+                                                Няня
+                                            </div>
+                                            <div class="header-top-menu-button-resume-wrap-competition-menu__item">
+                                                 Водитель
+                                            </div>
+                                            <div class="header-top-menu-button-resume-wrap-competition-menu__item">
+                                                Садовник
+                                           </div>
+                                        </div>
+                                    </div>
+                                    <input type="text" placeholder="Образование" class="header-top-menu-button-resume-wrap-work_period">
+                                    <label for="file">Прикрепить резюме</label>
+                                    <input type="file" name="file" style="display: none;" id="file">
+                                </div>
+                                <input type="submit" class="header-top-menu-button button-submit">
+                            </form>
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="menu">
+            <div class="menu-wrap">
+                <div class="menu">
                     <div class="left-block">
                         <button class="block">
                             <span>главная</span>
@@ -61,22 +143,23 @@
                         </button>
                     </div>
                 </div>
-        </header>
-        <main>
-            <div class="main-dots">
-                <div class="main-dots__dot active_dot">
+            </div>
+            <div class="header-dots">
+                <div class="header-dots__dot active_dot" id="0">
                 </div>
-                <div class="main-dots__dot">
+                <div class="header-dots__dot" id="1">
                 </div>
-                <div class="main-dots__dot">
+                <div class="header-dots__dot" id="2">
                 </div>
-                <div class="main-dots__dot">
+                <div class="header-dots__dot" id="3">
                 </div>
-                <div class="main-dots__dot">
+                <div class="header-dots__dot" id="4">
                 </div>
-                <div class="main-dots__dot">
+                <div class="header-dots__dot" id="5">
                 </div>
             </div>
+        </header>
+        <main>
             <div class="staff-info">
                 <div class="staff-info-box">
                     <img src="./static/images/house.png" alt="house.png">
@@ -126,7 +209,7 @@
             <div class="text">
                 <h2>Заголовок</h2>
                 <p>
-                    Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не span дань моде и не причуды избалованных нежданно свалившимся богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени
+                    Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимся богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени
                     Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимся богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени
                 </p>
                 <p>
@@ -141,23 +224,31 @@
         <footer>
             <div class="footer-top">
                 <ul class="footer-top-navigation">
-                    <li class="footer-top-navigation__item">
-                        главная
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">главная</a>
                     </li>
-                    <li class="footer-top-navigation__item">
-                        подобрать персонал
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">подобрать персонал</a>
                     </li>
-                    <li class="footer-top-navigation__item">
-                        цены
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">
+                            цены
+                        </a>
                     </li>
-                    <li class="footer-top-navigation__item">
-                        главная
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">
+                            главная
+                        </a>
                     </li>
-                    <li class="footer-top-navigation__item">
-                        подобрать персонал
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">
+                            подобрать персонал
+                        </a>
                     </li>
-                    <li class="footer-top-navigation__item">
-                        цены
+                    <li class="footer-top-navigation-item">
+                        <a href="" class="footer-top-navigation-item__link">
+                            цены
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -174,5 +265,7 @@
     </div>
     </div>
     <script src="./static/js/menu.js"></script>
+    <script src="./static/js/header.js"></script>
+    <script src="./static/js/slider.js"></script>
 </body>
 </html>
